--- a/views/board.haml
+++ b/views/board.haml
@@ -37,11 +37,11 @@
                         %br/
                         %p
                             %hr{width:"50%"}/
-                        .feed-container= haml(:'partials/_posts_list')
+                        .feed-container= haml(:'partials/_feed')
                     - else
                         .new_board
                             %h1 No such board exists
-                            -# yet.
+                            -# yet?
                             -# %form.ib{:name => "board_form", :action => "/board/new", :method => "post"}
                             -#     %fieldset
                             -#         %legend You can create it:
