--- a/views/home.haml
+++ b/views/home.haml
@@ -37,7 +37,7 @@
                     %p
                         %hr{width:"50%"}/
                     %h6= "#{@posts.length}"
-                    .feed-container= haml(:'partials/_posts_list')
+                    .feed-container= haml(:'partials/_feed')
             
             #right.column
                 .b.h
